--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="Depicture"
         tools:replace="android:label"
         android:supportsRtl="true"
@@ -36,14 +36,16 @@
         <activity android:name="net.temporus.depikture.DrawActivity" />
 
         <service
-            android:name="net.temporus.depikture.services.DepictureFirebaseInstanceIDService">
+            android:name="net.temporus.depikture.services.DepictureFirebaseInstanceIDService"
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
         </service>
 
         <service
-            android:name="net.temporus.depikture.services.DepictureFirebaseMessagingService">
+            android:name="net.temporus.depikture.services.DepictureFirebaseMessagingService"
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
