--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         <activity
             android:name="net.temporus.depikture.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,13 +28,19 @@
 
         <activity
             android:name="net.temporus.depikture.SettingsActivity"
-            android:label="@string/title_activity_settings" />
+            android:label="@string/title_activity_settings"
+            android:screenOrientation="portrait"/>
 
-        <activity android:name="net.temporus.depikture.AboutActivity" />
-        <activity android:name="net.temporus.depikture.SubmitDescriptionActivity" />
-        <activity android:name="net.temporus.depikture.SelectDescriptionActivity" />
-        <activity android:name="net.temporus.depikture.LobbyActivity" />
-        <activity android:name="net.temporus.depikture.DrawActivity" />
+        <activity android:name="net.temporus.depikture.AboutActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name="net.temporus.depikture.SubmitDescriptionActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name="net.temporus.depikture.SelectDescriptionActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name="net.temporus.depikture.LobbyActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name="net.temporus.depikture.DrawActivity"
+            android:screenOrientation="portrait"/>
 
         <service
             android:name="net.temporus.depikture.services.DepictureFirebaseInstanceIDService"
@@ -50,6 +57,10 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
     </application>
 
