--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ sourceSets {
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-messaging:11.6.2'
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -37,7 +37,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile 'com.android.support:design:26.1.0'
     compile "org.jetbrains.anko:anko:$anko_version"
     compile "com.squareup.retrofit2:retrofit:2.3.0"
@@ -54,6 +54,7 @@ dependencies {
 repositories {
     mavenCentral()
 }
+
 kotlin {
     experimental {
         coroutines "enable"
